# IMLP-464

./: .gitignore  README.md  bias_variance.ipynb  main.py  pyproject.toml  yilan_cabbage_project_template.ipynb
Unit01/: Unit01_Crash Course on Python.ipynb  original.ipynb  score.csv
Unit02/: 2.1_NumPy和陣列導向的程式設計.ipynb  2.2.2_Pandas數據分析.ipynb  2.3.1_Matplotlib.ipynb  2.3.2_Matplotlib資料視覺化.ipynb  2.4.1_color_palette.ipynb  2.4.2_Seaborn數據視覺化.ipynb  Untitled.ipynb  Working_matplotlib_seaborn_with_Chinese.ipynb
Unit03/: 1_Pearson_correlation_coefficient.ipynb  2_Vector_cos.ipynb  3_Similarity.ipynb  4_Categorical_features_實戰.ipynb  5_Prepocessing_實戰.ipynb  6_scikit_learn_Basic_實戰.ipynb
Unit04/: Linear Regression_1.ipynb  Linear Regression_2.ipynb  Linear Regression_3.ipynb  Linear Regression_HW.ipynb  Ridge and Lasso Regression.ipynb  _Loss Function.ipynb  comparison.ipynb
Unit05/: 01_activation.ipynb  02_Logistic Regression實作.ipynb  02_Logistic regression.ipynb  02_Logistic regression實戰_ref.ipynb  02_Logistic_multiclass_ref.ipynb  03_KNN基礎.ipynb  03_KNN實作.ipynb  03_KNN實作_original.ipynb  03_KNN實作_ref.ipynb  utility.py
Unit05_2/: DecisionTree_Entropy.ipynb  DecisionTree_RandomForest_original.ipynb  DecisionTree_RandomForest_ref.ipynb  RandomForest_調參.ipynb  SVM.ipynb  SVM實戰_ref.ipynb  utility.py
Unit06/: 1.1_ROC.ipynb  1.2_ROC實作.ipynb  1.3_ConfusionMatrix_實戰.ipynb  2.1_Bagging_original.ipynb  2.1_Bagging_updated.ipynb  2.2_Boosting_original.ipynb  2.2_Boosting_updated.ipynb  2.3_Ensemble實戰_original.ipynb  ensemble_learning_notes_updated.ipynb  (+1 more)
(+4 files in other folders)
