[project]
name = "imlp-464"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

