[project]
name = "imlp-464"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "pydotplus>=2.0.2",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]

